--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.url=jdbc:mysql://db-server:3306/emp_data?createDatabaseIfNotEx
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
  
 spring.datasource.username=root
-spring.datasource.password=MyRootPass123
+spring.datasource.password=Root
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 ##spring.jpa.generate-ddl=true
 
